<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, YambaActivity!</string>
	<string name="app_name">Yamba</string>
	<string name="titleStatus">Status Update</string>
	<string name="hintText">Please enter your 140-character status</string>
	<string name="buttonUpdate">Update</string>
	<string name="prefUsernameLabel">Username</string>
	<string name="prefUsernameSummary">Please enter your username</string>
	<string name="prefPasswordLabel">Password</string>
	<string name="prefPasswordSummary">Please enter you password</string>
	<string name="prefApiLabel">API Root</string>
	<string name="prefApiSummary">Please enter your API Root</string>
	<string name="titlePreference">Yamba Preferences</string>
	<string name="menuPrefLabel">Preferences</string>
	<string name="menuPrefCondensed">Pref</string>
	<string name="menuStartService">Start Background Service</string>
	<string name="menuStopService">Stop Background Service</string>
	<string name="titleTimeline">Timeline</string>
	<string name="titleRefresh">Refresh</string>
	<string name="msgSetupPrefs">Please enter your username and password and apiroot
	</string>
	<string name="titleServiceToggle">Toggle Background Service</string>
	<string name="titlePurge">Purge Database</string>
	<string name="msgAllDataPurged">Purged Database</string>
	<string name="send_timeline_notifications_permission_label">Send Timeline Notification</string>
	<string name="send_timeline_notifications_permission_description">This permission permits the sending of timeline
		notifications</string>
	<string name="receive_timeline_notifications_permission_label">Receive Timeline Notifications</string>
	<string name="receive_timeline_notifications_permission_description">This permission permits the receiving of timeline
		notifications</string>
	<string name="msgLastTimelineUpdate">Last Timeline Update</string>
	
	
	 <string name="msgNotificationTitle">New Yamba Status Updates</string>
  	<string name="msgNotificationMessage">You\'ve got %d new status update(s)</string>
  	
  	
	<string name="summaryUpdaterInterval">Select how often the update service is run</string>
	<string name="titleUpdaterInterval">Update Interval</string>
	<string-array name="locationProviderLabels">
		<item>None</item>
		<item>GPS</item>
		<item>Network</item>
	</string-array>
	<string-array name="locationProviderValues">
		<item>NONE</item>
		<item>gps</item>
		<item>network</item>
	</string-array>

	<string-array name="interval">
		<item>Never</item>
		<item>Every minute</item>
		<item>Fifteen minutes</item>
		<item>Half hour</item>
		<item>An hour</item>
		<item>Half day</item>
		<item>Day</item>
	</string-array>

	<string-array name="intervalValues">
		<item>0</item>
		<item>60000</item>
		<item>900000</item>
		<item>1800000</item>
		<item>3600000</item>
		<item>43200000</item>
		<item>86400000</item>
	</string-array>
	<string name="titleLocationProvider">Location Provider</string>
	<string name="summaryLocationProvider">Please choose which location provider you want to
		use</string>
</resources>
